# epd-benchmark

./: .gitignore  README.md  environment.yaml  pyproject.toml
.github/workflows/: docker-build.yml
configs/: benchmark_config.yaml
docker/: Dockerfile  build_and_push.sh
scripts/: run_benchmark.sh  run_elasticmm_standalone.sh  run_vllm_standalone.sh  setup_dev_environment.sh  setup_remote_server.sh
src/epd_benchmark/: __init__.py  cli.py  config.py
src/epd_benchmark/benchmarks/: __init__.py  runner.py
src/epd_benchmark/launchers/: __init__.py  elasticmm_launcher.py  vllm_launcher.py
src/epd_benchmark/utils/: __init__.py  metrics.py  request_generator.py
